--- a/src/assets/css/common.scss
+++ b/src/assets/css/common.scss
@@ -240,6 +240,36 @@ ul, li, dl, dt {list-style: none;margin: 0;padding: 0;}
                         font-size: 19px;
                         padding-top: 8px;
                     }
+
+                    .likes {
+                        position: absolute;
+                        top: 10px;
+                        right: 10px;
+                        border: 1px solid #e8e8e8;
+                        border-radius: 25px;
+                        background: #fff;
+                        padding: 8px 12px;
+                        font-size: 13px;
+
+                        .count {
+                            padding-left: 3px;
+                            color:#999;
+                        }
+                    }
+
+                    .icons {
+                        position: absolute;
+                        right: 10px;
+                        bottom: 10px;
+
+                        svg {
+                            width: 20px;
+                            height: 20px;
+                            color: #999;
+                            border: 1px solid #e8e8e8;
+                            padding: 5px;
+                        }
+                    }
                 }
 
                 .custom-dot {
