--- a/src/assets/css/common.scss
+++ b/src/assets/css/common.scss
@@ -124,6 +124,7 @@ ul, li, dl, dt {list-style: none;margin: 0;padding: 0;}
 
     .secContent {
         display:flex;
+        align-items: center;
 
         > div {
             width: 50%;
@@ -182,11 +183,16 @@ ul, li, dl, dt {list-style: none;margin: 0;padding: 0;}
                     &.prev {
                         left: 0;
                     }
+                    
+                    &:not(.disable){
+                        &:hover {
+                            background: #222;
+                            color: #fff;
+                        }
+                    }
                 }
 
                 &:hover .arrow {
-                    color: #fff;
-                    background: #222;
                     opacity: 1;
 
                     &.prev {
@@ -195,6 +201,10 @@ ul, li, dl, dt {list-style: none;margin: 0;padding: 0;}
 
                     &.next {
                         transform: translate(-30px, 0);
+                    }
+
+                    &.disable {
+                        opacity: .35;
                     }
                 }
 
@@ -283,6 +293,28 @@ ul, li, dl, dt {list-style: none;margin: 0;padding: 0;}
                         transition: color 0.25s ease;
                     }
                 }
+            }
+        }
+
+        .right {
+            span {
+                display: inline-block;
+                font-size: 23px;
+                font-weight: 300;
+                padding-bottom: 30px;
+                font-family: "GmarketSansMedium";
+            }
+
+            h2 {
+                font-size: 72px;
+                font-weight: 600;
+            }
+
+            p {
+                padding-top: 50px;
+                font-size: 24px;
+                font-weight: 300;
+                font-family: "GmarketSansMedium", 'Noto Sans KR', sans-serif, '맑은 고딕','Malgun Gothic';
             }
         }
     }
