--- a/src/assets/css/common.scss
+++ b/src/assets/css/common.scss
@@ -392,6 +392,52 @@ p {margin: 0}
             }
         }
 
+        &.eighth {
+            background: url("../images/mainBg08.jpg") center center/cover no-repeat;
+
+            .box {
+                display: flex;
+                flex-direction: column;
+                padding: 0 150px 30px 150px;
+                color: #fff;
+                font-family: GmarketSans;
+
+                h2 {
+                    font-size: 90px;
+                    line-height: 1.2;
+                    font-weight: 700;
+                }
+    
+                p {
+                    font-size: 30px;
+                    line-height: 1.68;
+                    font-weight: 300;
+                    margin-top: 20px;
+                }
+    
+                span {
+                    font-size: 19px;
+                    font-weight: 300;
+                    line-height: 1.5;
+                    margin-top: 8px;
+                }
+
+                .more {
+                    margin-top: 34px;
+                    padding: 23px 25px;
+                    max-width: 135px;
+                    font-size: 15px;
+                    line-height: 1.5;
+                    color: #666;
+                    background: #fff;
+                    border-radius: 50px;
+                    text-align: center;
+                    font-weight: 400;
+                    box-sizing: border-box;
+                }
+            }
+        }
+
         .content {
             display: flex;
             align-items: center;
