--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -320,12 +320,19 @@ p {
 #fullpage .section.eighth {
   background: url("../images/mainBg08.jpg") center center/cover no-repeat;
 }
+#fullpage .section.eighth.active .box {
+  transform: translate(0, 0);
+  opacity: 1;
+}
 #fullpage .section.eighth .box {
   display: flex;
   flex-direction: column;
   padding: 0 150px 30px 150px;
   color: #fff;
   font-family: GmarketSans;
+  transform: translate(0, -70px);
+  opacity: 0;
+  transition: transform 1.5s ease, opacity 1.5s ease;
 }
 #fullpage .section.eighth .box h2 {
   font-size: 90px;
