--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -317,6 +317,35 @@ p {
   line-height: 1.8;
   font-family: GmarketSans;
 }
+#fullpage .section.seventh {
+  background: rgb(245, 245, 245);
+}
+#fullpage .section.seventh .box {
+  position: relative;
+  display: flex;
+  padding: 0 15% 0 45%;
+}
+#fullpage .section.seventh .box h2 {
+  position: absolute;
+  top: 50%;
+  left: 12%;
+  font-size: 63px;
+  font-weight: 700;
+  color: #000;
+  font-family: "GmarketSans";
+  transform: translate(0, -50%);
+}
+#fullpage .section.seventh .box h2 span {
+  display: block;
+  padding-top: 10px;
+  font-size: 28px;
+  color: #222;
+  font-weight: 300;
+}
+#fullpage .section.seventh .box .feed {
+  max-width: 1000px;
+  overflow: hidden;
+}
 #fullpage .section.eighth {
   background: url("../images/mainBg08.jpg") center center/cover no-repeat;
 }
