style: logo 안보이는 이슈 수정

--- a/src/assets/css/common.scss
+++ b/src/assets/css/common.scss
@@ -31,6 +31,7 @@ a {color: #222; text-decoration: none;}
         position:absolute;
         left: 85px;
         width: 107px;
+        height: 27px;
         background-image: url("../images/header/logo.svg");
         background-repeat: no-repeat;
         text-indent: -9999px;
