--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -47,6 +47,7 @@ a {
   position: absolute;
   left: 85px;
   width: 107px;
+  height: 27px;
   background-image: url("../images/header/logo.svg");
   background-repeat: no-repeat;
   text-indent: -9999px;
