--- a/src/assets/css/common.scss
+++ b/src/assets/css/common.scss
@@ -18,7 +18,7 @@ a {color: #222; text-decoration: none;}
     z-index: 1;
     width: 100%;
     height: 120px;
-    padding: 0 120px;
+    padding: 0 240px;
     box-sizing: border-box;
     font-family: "GmarketSans";
     color: #fff;
@@ -47,7 +47,6 @@ a {color: #222; text-decoration: none;}
         display: flex;
         width: 100%;
         height: 100%;
-        padding-left: 120px;
         box-sizing: border-box;
 
         li {
@@ -96,6 +95,18 @@ a {color: #222; text-decoration: none;}
     .icons {
         position: absolute;
         right: 85px;
+        font-size: 28px;
+        color: #fff;
+
+        span {
+            display: inline-block;
+            width: 45px;
+            text-align: center;
+            
+            svg {
+                cursor: pointer;
+            }
+        }
     }
 }
 
